- replace vi by sed to change release
- add command lines options (-h : help, -v : verbose, -V: version)
- add lsm description
- move .popt to /usr/lib/rpmrebuild
- fix some .popt problems with rpm 4.1 (Han Holl)
- have a link from rpmrebuild.sh to rpmrebuild
- add option -b for batch processing
- add option -k to keep installed files perm
- fix a buggy test for non-installed packages (Han Holl)
- add /usr/local/bin to the PATH and remove dirname
- use rpmbuild  if it exists (rpm 4.1)  (Han Holl)
- add -d option to change local dir
- add -e  option to edit spec file (Han Holl)
- add generation verify directive to the spec file
- add build testing and install testing
- fix a bug if release change

* Mon Oct  7 2002  <valery_reznic@users.sourceforge.net> 0.7.1
- split the script for a more modular way
- recode %file with all new tags (missingok, noreplace...)
- Valery Reznic join the project

* Mon Sep 30 2002  <gerbier@users.sourceforge.net> 0.7.0
- work on local dir (thanks Valery Reznic <valery_reznic@users.sourceforge.net>)

* Mon Sep 23 2002  <gerbier@users.sourceforge.net> 0.6.0
- add triggers (thanks to Han Holl <han.holl@prismant.nl>
- add many other spec tags (icon, exlude*, serial, provides, conflicts ...)

* Sun Sep 20 2002  <gerbier@users.sourceforge.net> 0.5.0
- try to have it work on any distribution
- the rpm package is now signed with my gpg key

* Mon Sep 17 2002  <gerbier@users.sourceforge.net> 0.4.2
- add architecture support (thanks to Han Holl <han.holl@prismant.nl>)
- add add require, obsolete tags
- force time format with LC_TIME to POSIX
- change shell name to match project name
- full english messages

* Mon Sep 17 2002  <gerbier@users.sourceforge.net> 0.4.1
- suppress useless exit
- shell cosmetic changes

* Sun Jul 14 2002  <gerbier@users.sourceforge.net>
- Initial spec file created by autospec ver. 0.6 with rpm 2.5 compatibility
- check changes (rpm -V)
- check for multiples rpm
- simplify pre post tag
- add type doc and config files